[package]
name = "konduit-adaptor"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[package.metadata.release]
release = false

[dependencies]
actix = "0.13.5"
actix-web = "4.11.0"
anyhow.workspace = true
async-trait = "0.1.89"
cardano-tx-builder.workspace = true
clap.workspace = true
dotenvy = "0.15.7"
env_logger = "0.11.8"
hex = { workspace = true, features = ["serde"] }
log = "0.4.28"
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde-hex = "0.1.0"
serde_json.workspace = true
sled = "0.34.7"
thiserror = "2.0.17"
tokio.workspace = true
