[package]
name = "konduit-adaptor"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[package.metadata.release]
release = false

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-web = "4.11.0"
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22.1"
bitcoin_hashes = "=0.14.0"
bln-client.workspace = true
cardano-connect-blockfrost.workspace = true
cardano-connect.workspace = true
cardano-tx-builder.workspace = true
chrono = "0.4.42"
clap = { workspace = true, features = ["env"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures.workspace = true
fx-client = { workspace = true, features = ["cli", "namespaced"] }
hex = { workspace = true, features = ["serde"] }
humantime = "2.3.0"
konduit-data.workspace = true
konduit-tx.workspace = true
lightning-invoice = { version = "0.33.2", features = ["serde"] }
lightning-types = "0.2.0"
log = "0.4.28"
postcard = { version = "1.1.3", features = ["postcard-derive", "use-std"] }
reqwest = { workspace = true, features = ["json"] }
serde-hex = "0.1.0"
serde.workspace = true
serde_json.workspace = true
serde_with = { version = "3.15.1", features = ["base64", "hex", "json"] }
sled = "0.34.7"
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
proptest.workspace = true
proptest-derive = "0.7.0"
