[package]
name = "konduit-api"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bln-sdk.workspace = true
cardano-sdk.workspace = true
konduit-data.workspace = true
minicbor.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_with = { workspace = true, features = ["hex"] }
thiserror.workspace = true
web-time.workspace = true
# Clients
reqwest  = { version = "0.12", optional = true }
# Server
actix-web = { version = "4", optional = true }
futures   = { version = "0.3", optional = true }

[features]
client = ["dep:reqwest"]          # TODO: switch out for http-xxx
actix = ["dep:actix-web", "dep:futures"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
