[package]
name = "konduit-client"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "konduit-client"
path = "src/main.rs"
doc = false
required-features = ["cli"]

[features]
default = []
cli = [
  "dep:clap",
  "dep:dotenvy",
  # "dep:http-client-native",
  # "dep:serde_json",
  "dep:tokio",
]

[dependencies]
anyhow.workspace = true
bln-sdk.workspace = true
cardano-connector.workspace = true
cardano-sdk.workspace = true
http-client.workspace = true
konduit-data.workspace = true
konduit-tx.workspace = true
log.workspace = true
web-time.workspace = true
# -F cli
clap = { workspace = true, features = ["env"], optional = true }
dotenvy = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
# FIXME :: Disabled to appease cargo machete, and while main is broken
# serde_json = { workspace = true, optional = true }
# http-client-native = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
proptest-derive.workspace = true
