[package]
name = "konduit-data"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[package.metadata.release]
release = false

[dependencies]
anyhow.workspace = true
cardano-tx-builder.workspace = true
chrono.workspace = true
hex.workspace = true
cryptoxide.workspace = true
uplc.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
serde_with = { version = "3.16.1", features = ["hex"] }
bincode = "1.3.3"
