[package]
name = "konduit-server"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
actix-cors.workspace = true
actix-web.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bln-client = { workspace = true, features = ["cli", "namespaced"] }
cardano-connector-direct.workspace = true
cardano-connector.workspace = true
cardano-sdk.workspace = true
clap = { workspace = true, features = ["env"] }
dotenvy.workspace = true
env_logger.workspace = true
futures.workspace = true
fx-client = { workspace = true, features = ["cli", "namespaced"] }
hex = { workspace = true, features = ["serde"] }
humantime.workspace = true
konduit-data.workspace = true
konduit-tx.workspace = true
log.workspace = true
postcard = { workspace = true, features = ["postcard-derive", "use-std"] }
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
serde_with = { workspace = true, features = ["base64", "hex", "json"] }
sled.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
proptest.workspace = true
proptest-derive.workspace = true
