[package]
name = "konduit-tx"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[package.metadata.release]
release = false

[dependencies]
anyhow.workspace = true
cardano-connect.workspace = true
cardano-tx-builder.workspace = true
chrono.workspace = true
hex.workspace = true
konduit-data.workspace = true
serde_json.workspace = true
web-time.workspace = true
